# stock_slave_app

./: .env.sample  .env_template  Makefile  app.py  pyproject.toml  requirements.txt
base/: __init__.py  command.py  config.py  logger.py  scrapper.py
base/auth/: auth.py  routes.py
base/commands/: __init__.py  fetch_recommendations.py
base/database/: client.py  repository.py
base/mailing/: client.py  schemas.py
base/stock/: manager.py  repository.py  routes.py  schemas.py  scrapper.py
