[tool.poetry]
name = "slave"
version = "0.1.0"
description = ""
authors = ["bartnyk <jakub@bartnyk.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
beautifulsoup4 = "^4.12.3"
flask-login = "^0.6.3"
requests = "^2.32.3"
pydantic = "^2.9.2"
pymongo = "^4.10.1"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
